<resources>
    <string name="app_name">MyTasks</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_logout">Logout</string>
    <!-- Strings related to MyTasks-->
    <string name="createGroup">Crear Grupo</string>
    <string name="createActivity">Crear Actividad</string>
    <string name="groupAll">Todos</string>
    <string name="mainTitle">Grupos</string>
    <string name="groupNone">Sin Grupo</string>
    <string name="defaultGroup">Grupo</string>
    <string name="crear_actividad">Crear Actividad</string>
    <string name="hora_recordatorio">Hora Recordatorio</string>
    <string name="fecha_recordatorio">Fecha Recordatorio</string>
    <string name="hora_de_actividad">Hora de Actividad</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha_de_actividad">Fecha de Actividad</string>
    <string name="titulo_de_la_actividad">Titulo de la Actividad</string>
    <string name="crear_grupo">Crear Grupo</string>
    <string name="titulo_del_grupo">Titulo del Grupo</string>
    <string name="volver">Volver</string>
    <string name="placeholder">Placeholder</string>
    <string name="collapsible_arrow">Collapsible Arrow</string>
    <string name="modify">Modificar</string>
    <string name="delete">Borrar</string>
    <string name="descr_overflow_button">popup menu</string>
    <string name="modificar_grupo">Modificar Grupo</string>
    <string name="radio_button">radio button</string>
    <string name="modificar_actividad">Modificar Actividad</string>
    <string name="nombre_task_invalido">Nombre de task Invalido</string>
    <string name="largo_task_invalido">No puede superar los 20 caracteres</string>
    <string name="largo_descripcion_task_invalido">No puede superar los 300 caracteres</string>
    <string name="fecha_actividad_invalido">Fecha de actividad invalido</string>
    <string name="hora_actividad_invalido">Hora de actividad invalido</string>
    <string name="fecha_actividad_recordatorio_invalido">Fecha de recordatorio invalido</string>
    <string name="hora_actividad_recordatorio_invalido">Hora de recordatorio invalido</string>
    <string name="fecha_recordatorio_superior_fecha_actividad">La fecha de actividad de recordatorio es superior a la fecha de recordatorio</string>
    <string name="taskStatus">%1$s (%2$d)</string>
    <string name="calendarioImagen">Ir a Calendario</string>
    <string name="tituloCalendario">Calendario</string>
    <array name="materia_calendar_months_array">
        <item>Enero</item>
        <item>Febero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_negative_button">Cancelar</string>

    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>