<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/child_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="@string/radio_button"
            android:src="@drawable/baseline_radio_button_unchecked_24" />

        <TextView
            android:id="@+id/task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/task_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="@string/descr_overflow_button"
            android:src="@drawable/ic_overflow_holo_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>