<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateTaskActivity">

    <TextView
        android:id="@+id/ta_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_actividad"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/ta_et_task_titulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titulo_de_la_actividad"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_title" />

    <EditText
        android:id="@+id/ta_et_task_fecha"
        android:layout_width="166dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/fecha_de_actividad"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_titulo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ta_et_task_descripcion"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_fecha"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ta_et_task_recordar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_descripcion">

        <Button
            android:id="@+id/ta_btn_task_descripcion_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="Record" />

        <Button
            android:id="@+id/ta_btn_task_play_description_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play" />
    </LinearLayout>

    <EditText
        android:id="@+id/ta_et_task_hora"
        android:layout_width="188dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hora_de_actividad"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ta_et_task_fecha"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_titulo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ta_bt_createTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/crear_actividad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_sp_groups"
        app:layout_constraintVertical_bias="0.25" />

    <Switch
        android:id="@+id/ta_et_task_recordar"
        android:layout_width="243dp"
        android:layout_height="27dp"
        android:text="Hacerme Acordar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_descripcion"
        app:layout_constraintVertical_bias="0.245" />

    <EditText
        android:id="@+id/ta_et_task_fecha_recordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/fecha_recordatorio"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_descripcion"
        app:layout_constraintVertical_bias="0.274" />

    <Spinner
        android:id="@+id/ta_sp_groups"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_fecha_recordatorio"
        app:layout_constraintVertical_bias="0.011" />

    <EditText
        android:id="@+id/ta_et_task_hora_recordatorio"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hora_recordatorio"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ta_et_task_fecha_recordatorio"
        app:layout_constraintTop_toBottomOf="@+id/ta_et_task_descripcion"
        app:layout_constraintVertical_bias="0.273" />

</androidx.constraintlayout.widget.ConstraintLayout>